--- a/views/index.erb
+++ b/views/index.erb
@@ -32,7 +32,7 @@
                 <form method="POST" class="pure-form">
                 <fieldset>
                   <legend>New Post</legend>
-                  <input type="text" name="text" size="70" maxlength="140">
+                  <input type="text" name="text" size="70" maxlength="140" autofocus>
                   <button type="submit" class="pure-button pure-button-primary">Post</button>
                 </fieldset>
                 </form>
