--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microblog</title>
+    <title>Journal</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
     <link rel="stylesheet" href="/blog.css">
@@ -12,7 +12,7 @@
     <div id="layout" class="pure-g">
       <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="header">
-          <h1 class="brand-title">Microblog</h1>
+          <h1 class="brand-title">Journal</h1>
           <h2 class="brand-tagline">A Ruby sample app</h2>
           <nav class="nav">
             <ul class="nav-list">
