--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journal</title>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/grids-responsive-min.css">
     <link rel="stylesheet" href="/blog.css">
   </head>
   <body>
@@ -16,9 +16,9 @@
           <h2 class="brand-tagline">A Ruby sample app</h2>
           <nav class="nav">
             <ul class="nav-list">
-              <li class="nav-item"><a href="http://ws.uhlig.it/vorlesung" class="pure-button">Vorlesung</a></li>
-              <li class="nav-item"><a href="http://ws.uhlig.it/uebung" class="pure-button">Übung</a></li>
-              <li class="nav-item"><a href="http://ws.uhlig.it/beleg" class="pure-button">Beleg</a></li>
+              <li class="nav-item"><a href="https://ws.uhlig.it/vorlesung" class="pure-button">Vorlesung</a></li>
+              <li class="nav-item"><a href="https://ws.uhlig.it/uebung" class="pure-button">Übung</a></li>
+              <li class="nav-item"><a href="https://ws.uhlig.it/beleg" class="pure-button">Beleg</a></li>
             </ul>
           </nav>
         </div>
@@ -59,9 +59,9 @@
           <div class="footer">
             <div class="pure-menu pure-menu-horizontal">
               <ul>
-                <li class="pure-menu-item"><a href="http://ws.uhlig.it/vorlesung" class="pure-menu-link">Vorlesung</a></li>
-                <li class="pure-menu-item"><a href="http://ws.uhlig.it/uebung" class="pure-menu-link">Übung</a></li>
-                <li class="pure-menu-item"><a href="http://ws.uhlig.it/beleg" class="pure-menu-link">Beleg</a></li>
+                <li class="pure-menu-item"><a href="https://ws.uhlig.it/vorlesung" class="pure-menu-link">Vorlesung</a></li>
+                <li class="pure-menu-item"><a href="https://ws.uhlig.it/uebung" class="pure-menu-link">Übung</a></li>
+                <li class="pure-menu-item"><a href="https://ws.uhlig.it/beleg" class="pure-menu-link">Beleg</a></li>
                 <li class="pure-menu-item"><a href="#">(served by <%= hostname %>)</a></li>
               </ul>
             </div>
