--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
           <nav class="nav">
             <ul class="nav-list">
               <li class="nav-item"><a href="https://ws.uhlig.it/vorlesung" class="pure-button">Vorlesung</a></li>
-              <li class="nav-item"><a href="https://ws.uhlig.it/uebung" class="pure-button">Übung</a></li>
+              <li class="nav-item"><a href="https://ws.uhlig.it/uebungen" class="pure-button">Übung</a></li>
               <li class="nav-item"><a href="https://ws.uhlig.it/beleg" class="pure-button">Beleg</a></li>
             </ul>
           </nav>
@@ -60,7 +60,7 @@
             <div class="pure-menu pure-menu-horizontal">
               <ul>
                 <li class="pure-menu-item"><a href="https://ws.uhlig.it/vorlesung" class="pure-menu-link">Vorlesung</a></li>
-                <li class="pure-menu-item"><a href="https://ws.uhlig.it/uebung" class="pure-menu-link">Übung</a></li>
+                <li class="pure-menu-item"><a href="https://ws.uhlig.it/uebungen" class="pure-menu-link">Übung</a></li>
                 <li class="pure-menu-item"><a href="https://ws.uhlig.it/beleg" class="pure-menu-link">Beleg</a></li>
                 <li class="pure-menu-item"><a href="#">(served by <%= hostname %>)</a></li>
               </ul>
